--- a/Lab3 (Online Store)/src/scss/style.scss
+++ b/Lab3 (Online Store)/src/scss/style.scss
@@ -241,8 +241,9 @@ nav {
     justify-content: flex-end;
     width: 100%;
     padding: 10px 0;
+    margin-top: 40px;
 
-    .basketTotalTitle {
+    .basketTitle {
         width: 30%;
     }
     .basketTotalArrows{
