--- a/Lab4 (Site Informer)/src/scss/style.scss
+++ b/Lab4 (Site Informer)/src/scss/style.scss
@@ -1,3 +1,178 @@
+// General Settings
 * {
-    background-color: aquamarine;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
+
+body {
+    font-family: 'Delius Unicase', cursive;
+    background-image: url('https://source.unsplash.com/1600x900/?weather');
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+$color-w:  #fff;
+
+// Specific classes
+.weather-app {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
+header {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 50px 15px 15px;
+
+    input {
+        width: 100%;
+        max-width: 380px;
+        height: 60px;
+        padding: 10px 15px;
+        border: none;
+        outline: none;
+        background-color: rgba(255, 255, 255, 0.76);
+        border-radius: 16px 0 16px 0;
+        border-bottom: 3px solid #DF8E00;
+
+        color: #313131;
+        font-size: 20px;
+        font-weight: 300;
+        transition: 0.2s ease-out;
+
+        &:focus{
+            background-color: rgba(255,255,255,0.6);
+        }
+    }
+}
+
+main {
+    flex: 1 1 100%;
+    padding: 25px 25px 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+
+    .location{
+        .city {
+            color: #DF8E00;
+            background-color: rgb(212, 255, 168);
+            border-radius: 7px;
+            font-size: 32px;
+            font-weight: 500;
+            margin-bottom: 24px;
+        }
+        .date{
+            color: $color-w;
+            font-size: 16px;
+            background-color: rgba(160, 43, 97, 0.42);
+            border-radius: 0 8px 0 8px;
+            padding: 8px;
+        }
+    }
+
+    .current {
+        .temp {
+        color: $color-w;
+        font-size: 102px;
+        font-weight: 900;
+        margin: 30px 0px;
+        text-shadow: 2px 12px rgba(0,0,0,0.7);
+        
+        span {font-weight: 500;}
+        }
+        .weather-ico {
+            background-color: rgba(57, 255, 212, 0.3);
+            border-radius: 50%;
+        }
+
+        .description{
+            color: $color-w;
+            background-color: rgba(154, 163, 161, 0.8);
+            border-radius: 10px;
+            display: flex;
+            justify-content: center;
+            align-items: center
+        }
+        .weather {
+            color: $color-w;
+            font-size: 40px; 
+            font-weight: 1200; 
+            text-shadow: 5px 2px rgba(0,0,0,0.9);
+            padding: 16px;
+        }
+        .humidity {
+            color: $color-w;
+            font-style: italic;
+            font-size: 25px;
+            background-color: rgba(57, 255, 212, 0.8);
+            border-radius: 8px;
+            padding: 15px;
+            margin-bottom: 20px;
+        }
+        .hi-low {
+            background-color: rebeccapurple;
+            font-size: 34px;
+            font-weight: 500;
+            padding: 4px;
+        }
+    }
+}
+.local-source {
+    background-color: rgb(253, 167, 167);
+    font-size: larger;
+    margin: 41px;
+    padding: 5px ;
+
+    a{
+        text-decoration: none;
+    color: darkblue;
+    }
+}
+// Users page
+.users{
+    background-color: rgb(253, 167, 167);
+    font-size: larger;
+    font-weight: 700;
+    margin: 41px;
+    padding: 5px ;
+    
+    a{
+        text-decoration: none;
+    color: rgb(4, 90, 69);
+    }
+}
+
+.info {
+    #user{
+        background-color: #36A9AE;
+        border: 5px double #2A8387;
+        border-radius: 8px;
+        color: #FFFFFF;
+        cursor: pointer;
+        display: block;
+        font-size: 37px;
+        line-height: 100%;
+        padding: 11px 15px 12px;
+        text-align: center;
+        width: 100%;
+    }
+
+    #results{
+        background-color: #fff;
+        color:#724903;
+        font-size: 20px;
+        padding: 5px;
+    }
+}
+
+
+
+ 
+
+
+
