--- a/Lab3 (Online Store)/src/scss/style.scss
+++ b/Lab3 (Online Store)/src/scss/style.scss
@@ -145,6 +145,7 @@ nav {
         margin-left: 0px;
         margin-right: 10px;
         cursor: pointer;
+        // background-color:hsl(120, 100%, 50%);
     }
     
     
