--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,4 +5,4 @@
 <app-section2-cards></app-section2-cards>
 <router-outlet></router-outlet>
 
-<footer><span>&copy; Ремез Максим 29.12.2021, робота з дисципліни веб-програмування” Група: МІТ-21, Варіант 4 </span></footer>
+<footer><span>&copy; Ремез Максим 29.12.2021, робота з дисципліни "Веб-програмування”, група: МІТ-21, Варіант 4 </span></footer>
